added style to the h1 and p

--- a/index.html
+++ b/index.html
@@ -3,9 +3,18 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>COMP001B - Lecture Activity 2</title>
+    <link rel="stylesheet" href="main.css">
 </head>
 <body>
-    
+    <header>
+        <h1> Hello </h1>
+    </header>
+    <main>
+        <p class="para-size">Congue tincidunt amet congue maecenas aenean penatibus, taciti orci. Quisque pellentesque fringilla mi ad sollicitudin felis augue. Imperdiet sociosqu fermentum sed tincidunt viverra nascetur. Fringilla inceptos ligula imperdiet mus taciti. Sed imperdiet mattis interdum massa id quam magnis. Ultricies pharetra eleifend tempor curabitur eleifend feugiat. Posuere commodo auctor quisque nullam, commodo metus. Fringilla sed consequat varius, pulvinar vehicula conubia cursus.
+        </p>
+        <p class="para-size margin-auto">Duis consectetur habitasse ligula commodo laoreet taciti feugiat. Accumsan sed porttitor finibus integer hac per. Vulputate potenti senectus maximus volutpat volutpat. Arcu volutpat adipiscing litora mattis iaculis mattis, posuere tincidunt interdum. Nam etiam ac pellentesque, posuere venenatis nisl aptent tempor eu. Libero sollicitudin consectetur ex sodales conubia; ac neque tempor. Suscipit mi magnis neque volutpat quisque pretium morbi.
+        </p>
+    </main>
 </body>
 </html>
