--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <header>
-        <h1> Hello </h1>
+        <h1> Header example </h1>
     </header>
     <main>
         <p class="para-size">Congue tincidunt amet congue maecenas aenean penatibus, taciti orci. Quisque pellentesque fringilla mi ad sollicitudin felis augue. Imperdiet sociosqu fermentum sed tincidunt viverra nascetur. Fringilla inceptos ligula imperdiet mus taciti. Sed imperdiet mattis interdum massa id quam magnis. Ultricies pharetra eleifend tempor curabitur eleifend feugiat. Posuere commodo auctor quisque nullam, commodo metus. Fringilla sed consequat varius, pulvinar vehicula conubia cursus.
